style additions, gruntfile, timer initialized

--- a/index.html
+++ b/index.html
@@ -22,8 +22,33 @@
         <div class="best-container">0</div>
       </div>
     </div>
+    <div class="times-best-container">
+      <div class="third">
+        <div class="times-best times-best-64">
+            <span class="block">64</span> <span class="time">00:00:00</span>
+        </div>
+        <div class="times-best times-best-128">
+            <span class="block">128</span> <span class="time">00:00:00</span>
+        </div>
+      </div>
+      <div class="third">
+        <div class="times-best times-best-256">
+            <span class="block">256</span> <span class="time">00:00:00</span>
+        </div>
+        <div class="times-best times-best-512">
+            <span class="block">512</span> <span class="time">00:00:00</span>
+        </div>
+      </div>
+      <div class="third">
+        <div class="times-best times-best-1024">
+            <span class="block">1024</span> <span class="time">00:00:00</span>
+        </div>
+        <div class="times-best times-best-2048">
+            <span class="block">2048</span> <span class="time">00:00:00</span>
+        </div>
+      </div>
+    </div>
     <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
-
     <div class="game-container">
       <div class="game-message">
         <p></p>
@@ -85,6 +110,7 @@
   <script src="js/tile.js"></script>
   <script src="js/local_score_manager.js"></script>
   <script src="js/game_manager.js"></script>
+  <script src="js/timer.js"></script>
   <script src="js/application.js"></script>
 </body>
 </html>
