--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   <script src="js/html_actuator.js"></script>
   <script src="js/grid.js"></script>
   <script src="js/tile.js"></script>
-  <script src="js/local_score_manager.js"></script>
+  <script src="js/local_storage_manager.js"></script>
   <script src="js/game_manager.js"></script>
   <script src="js/timer.js"></script>
   <script src="js/times_best.js"></script>
