timer overflow prevention, style fixes

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </div>
     </div>
     <p class="game-explanation">
-      <strong>Arrow</strong> and <strong>W A S D</strong> keys move the tiles. When two tiles with the same number bump, <strong>they merge</strong>.
+      <strong>Arrows</strong> and <strong>W A S D</strong> keys move the tiles. When two tiles with the same number touch, <strong>they merge</strong>.
     </p>
     <p class="game-explanation">
       <strong>Space key</strong> restarts the game.
